--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "SET NODE_ENV=production& node server",
-    "dev": "nodemon server"
+    "dev": "node server"
   },
   "author": "Praveen Prajapati",
   "license": "ISC",
