--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "anime quote api",
   "main": "server.js",
   "scripts": {
-    "start": "SET NODE_ENV=production& node server",
+    "start": "node server",
     "dev": "node server"
   },
   "author": "Praveen Prajapati",
